@@ -26,8 +26,6 @@
 #include "../player.h"
 #include "../graphics.h"
 
-#include "../graphic/imagerect.h"
-
 #include "../resources/image.h"
 #include "../resources/resourcemanager.h"
 #include "../resources/spriteset.h"
