@@ -25,8 +25,6 @@
 
 #include "../graphics.h"
 
-#include "../graphic/imagerect.h"
-
 #include "../resources/image.h"
 #include "../resources/resourcemanager.h"
 
