@@ -27,8 +27,6 @@
 
 #include "../graphics.h"
 
-#include "../graphic/imagerect.h"
-
 #include "../resources/image.h"
 #include "../resources/resourcemanager.h"
 
